--- a/tnt-erp/package.json
+++ b/tnt-erp/package.json
@@ -8,8 +8,8 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "firebase": "^7.15.5",
+    "firebase-tools": "^8.4.3",
     "material-table": "^1.63.1",
-    "mssql": "^6.2.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1"
